--- a/CorriMario/CorriMario.csproj
+++ b/CorriMario/CorriMario.csproj
@@ -78,6 +78,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <None Include="CorriMario_2013_01_15_16_20_41.sap" />
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml" />
   </ItemGroup>
@@ -88,6 +89,7 @@
     <Content Include="Background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="level0.jpg" />
     <Content Include="level1.jpg" />
     <Content Include="level2.jpg" />
     <Content Include="level3.jpg" />
